style(xs): fix white space
This commit includes changes to white spaces on xs screens.
The changes include:

- Adjusting width of header ads text block.
- Adjusting text size of hero offer block.
- Adjusting the width of the mail input field in the mail block

These changes ensure that the web page renders well on xs devices and
window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -487,91 +487,93 @@ vertical-align: top;
  *******************/
  @media screen and (min-width:320px) and (max-width: 479px) {
   /* header */
-.header-block {
-  grid-area: header;
-  height:35vh;
-  height:35dvh;
-  height:35svh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; 
-}
-
-.header__ads-block {
-  min-height: 10rem;
-  width: 100%;
-  background: #000000;
-  display: flex;
-  justify-content:center;
-  align-items: center; 
-}
-
-.header__ads-text-block  {
-  min-height: 7rem;
-  width: 90%;
-  background: #000000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__ads-text {
-  color: #fefefe; 
-  text-align: center; 
-}
-
-.line-break { 
-  display:block;
-}
-
-.header__prime-block {
-  min-height: 13rem;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 3%;
-  color: #040403;
-}
-
-.prime__text-block {
-  flex-basis: 20%;
-  display: flex; 
-  align-items: center;
-}
-
-.prime__text {
-  font-size: 2.2rem; 
-  padding-left:4%;
-  font-weight:600;
-}
-
-.prime__nav-block {
-  flex-basis: 30%; 
-  display:none ;
-}
- 
-.prime__button-block {
-  flex-basis: 30%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center; 
-}
-
-.prime__button-link-block { 
-  display:none;
-}
-
-.prime__button {
- display:none; 
-}
-
-.prime__menu-button-block { 
-width:3rem;
-}
-
-.prime__menu-button { 
-width:100%;
-vertical-align: top;
-}
+  .header-block {
+    grid-area: header;
+    height:47vh;
+    height:47dvh;
+    height:47svh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+  }
+  
+  .header__ads-block {
+    min-height: 10rem;
+    width: 100%;
+    background: #000000;
+    display: flex;
+    justify-content:center;
+    align-items: center; 
+  }
+  
+  .header__ads-text-block  {
+    min-height: 7rem;
+    width: 98%;
+    background: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .header__ads-text {
+    color: #fefefe; 
+    text-align: center; 
+    font-size:1.3rem
+  }
+  
+  .line-break { 
+    display:block;
+  }
+  
+  .header__prime-block {
+    min-height: 13rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 3%;
+    color: #040403;
+  }
+  
+  .prime__text-block {
+    flex-basis: 20%;
+    display: flex; 
+    align-items: center;
+  }
+  
+  .prime__text {
+    font-size: 2.2rem; 
+    padding-left:4%;
+    font-weight:600;
+  }
+  
+  .prime__nav-block {
+    flex-basis: 30%; 
+    display:none ;
+  }
+   
+  .prime__button-block {
+    flex-basis: 30%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center; 
+  }
+  
+  .prime__button-link-block { 
+    display:none;
+  }
+  
+  .prime__button {
+   display:none; 
+  }
+  
+  .prime__menu-button-block { 
+  width:3rem;
+  margin-right:2%;
+  }
+  
+  .prime__menu-button { 
+  width:100%;
+  vertical-align: top;
+  }
 
 /* main */
 .main-block {
@@ -594,9 +596,8 @@ vertical-align: top;
   width: 100%;
   display: flex;
   flex-direction: column; 
-  justify-content: center;
-  margin-top:5rem;
-  gap: 1.7rem;   
+  justify-content: center; 
+  gap: 1.9rem;   
 }
 
 .hero__info-heading-block {
@@ -604,7 +605,7 @@ vertical-align: top;
 }
 
 .hero__info-heading {
-  font-size: 3.2rem;
+  font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2;
   color: #040403;
@@ -619,7 +620,7 @@ vertical-align: top;
 }
 
 .hero__info-text {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 /* hero__offer-block */
@@ -630,9 +631,15 @@ vertical-align: top;
 .hero__offer-list-item {
   background: url(assets/Checkmark.svg) no-repeat left center;
   padding-left: 3.5rem;
-  line-height: 2.5;
+  line-height: 1.6;
+  gap:3rem;
   list-style: none;
-  font-weight:600;
+  font-weight:600; 
+ font-size:1.5rem;
+}
+
+.hero__offer-list-item:not(:last-of-type) {
+  margin-bottom:1.35rem
 }
 
 /* hero__mail-block */
@@ -641,13 +648,16 @@ vertical-align: top;
   width: 100%;
   display: flex;
   align-items: center;
+
 }
 
 .hero__mail {
   min-height: 7rem;
   width: 100%;
   display: flex;
+  justify-content: center;
   gap: 2rem; 
+  flex-wrap: wrap;
 }
 
 .mail__input-field {
@@ -657,11 +667,15 @@ vertical-align: top;
 }
 
 .mail__input {
-  padding: 1.5rem 1.4rem;
+  width: clamp(6.7rem, 15rem, 16rem);
+  min-height: 5rem;
   border-color: #fefefe;
-  border-radius: 0.5rem;
-  outline: none;
-  font-size: 1.5rem;
+  border-radius: 0.5rem; 
+  font-size: 1.4rem;
+}
+
+.mail__input::placeholder {
+  padding-left:5%;
 }
 
 .mail__button-block {
@@ -671,9 +685,8 @@ vertical-align: top;
 }
 
 .mail__button {
-  width: 10rem;
-  min-height: 5rem;
-  /* padding: 1.6rem 1.1rem; */
+  width: clamp(6rem, 10rem, 11rem);
+  min-height: 5rem; 
   border: none;
   border-radius: 0.3rem;
   font-size: 1.4rem;
@@ -683,7 +696,7 @@ vertical-align: top;
 }
 
 .hero__image-block {
-  min-height: 40rem;
+  min-height: 35rem;
   width: 100%;
   display: flex;
   background: url(assets/Hero\ Image\ \(Mobile\).png) no-repeat center;
